rest-api: suffix sizes with their units
